cdm/src/main/java/ucar/nc2/jni/netcdf/Nc4prototypes.java


  int nc_get_vars(int ncid, int varid, long[] startp, long[] countp, long[] stridep, ByteBuffer bbuff);
  int nc_get_vars_uchar(int ncid, int varid, long[] startp, long[] countp, long[] stridep, byte[] ip);
  int nc_get_vars_schar(int ncid, int varid, long[] startp, long[] countp, long[] stridep, byte[] ip);
  int nc_get_vars_text(int ncid, int varid, long[] startp, long[] countp, long[] stridep, byte[] ip);
  int nc_get_vars_short(int ncid, int varid, long[] startp, long[] countp, long[] stridep, short[] ip);
  int nc_get_vars_ushort(int ncid, int varid, long[] startp, long[] countp, long[] stridep, short[] ip);
  int nc_get_vars_int(int ncid, int varid, long[] startp, long[] countp, long[] stridep, int[] ip);
  int nc_get_vars_uint(int ncid, int varid, long[] startp, long[] countp, long[] stridep, int[] ip);
  int nc_get_vars_longlong(int ncid, int varid, long[] startp, long[] countp, long[] stridep, long[] ip);
  int nc_get_vars_ulonglong(int ncid, int varid, long[] startp, long[] countp, long[] stridep, long[] ip);
  int nc_get_vars_float(int ncid, int varid, long[] startp, long[] countp, long[] stridep, float[] ip);
  int nc_get_vars_double(int ncid, int varid, long[] startp, long[] countp, long[] stridep, double[] ip);
  int nc_get_vars_string(int ncid, int varid, long[] startp, long[] countp, long[] stridep, String[] ip);

  //////////////////////////////////////////////////////////////////////////////////
  //// writing

  static public final int  NC_FILL		= 0;	    /**< Argument to nc_set_fill() to clear NC_NOFILL */
  static public final int  NC_NOFILL	= 0x100;	/**< Argument to nc_set_fill() to turn off filling of data. */


  int nc_create(String path, int cmode, IntByReference ncidp);
  int nc_enddef	(int ncid);
  int nc_sync	(int ncid);

  int nc_def_grp (int parent_ncid, String name, IntByReference new_ncid);
  int nc_def_dim(int ncid,  String name, long len, IntByReference dimid);
  int nc_def_var (int ncid, String name, long xtype, int ndims, int[] dimids, IntByReference varidp);

  // write array section
  int nc_put_vara(int ncid, int varid, long[] startp, long[] countp, ByteBuffer bbuff);
  int nc_put_vara_uchar(int ncid, int varid, long[] startp, long[] countp, byte[] ip);
  int nc_put_vara_schar(int ncid, int varid, long[] startp, long[] countp, byte[] ip);
  int nc_put_vara_text(int ncid, int varid, long[] startp, long[] countp, byte[] ip);
  int nc_put_vara_short(int ncid, int varid, long[] startp, long[] countp, short[] ip);
  int nc_put_vara_ushort(int ncid, int varid, long[] startp, long[] countp, short[] ip);
  int nc_put_vara_int(int ncid, int varid, long[] startp, long[] countp, int[] ip);
  int nc_put_vara_uint(int ncid, int varid, long[] startp, long[] countp, int[] ip);
  int nc_put_vara_longlong(int ncid, int varid, long[] startp, long[] countp, long[] ip);
  int nc_put_vara_ulonglong(int ncid, int varid, long[] startp, long[] countp, long[] ip);
  int nc_put_vara_float(int ncid, int varid, long[] startp, long[] countp, float[] ip);
  int nc_put_vara_double(int ncid, int varid, long[] startp, long[] countp, double[] ip);

/*int nc_get_vara_string(int ncid, int varid, const size_t *startp, const size_t *countp, const ptrdiff_t *stridep, char **ip);  */
  int nc_put_vara_string(int ncid, int varid, long[] startp, long[] countp, long[] stridep, String[] ip);

  int nc_put_vars(int ncid, int varid, long[] startp, long[] countp, long[] stridep, ByteBuffer bbuff);
  int nc_put_vars_uchar(int ncid, int varid, long[] startp, long[] countp, long[] stridep, byte[] ip);
  int nc_put_vars_schar(int ncid, int varid, long[] startp, long[] countp, long[] stridep, byte[] ip);
  int nc_put_vars_text(int ncid, int varid, long[] startp, long[] countp, long[] stridep, byte[] ip);
  int nc_put_vars_short(int ncid, int varid, long[] startp, long[] countp, long[] stridep, short[] ip);
  int nc_put_vars_ushort(int ncid, int varid, long[] startp, long[] countp, long[] stridep, short[] ip);
  int nc_put_vars_int(int ncid, int varid, long[] startp, long[] countp, long[] stridep, int[] ip);
  int nc_put_vars_uint(int ncid, int varid, long[] startp, long[] countp, long[] stridep, int[] ip);
  int nc_put_vars_longlong(int ncid, int varid, long[] startp, long[] countp, long[] stridep, long[] ip);
  int nc_put_vars_ulonglong(int ncid, int varid, long[] startp, long[] countp, long[] stridep, long[] ip);
  int nc_put_vars_float(int ncid, int varid, long[] startp, long[] countp, long[] stridep, float[] ip);
  int nc_put_vars_double(int ncid, int varid, long[] startp, long[] countp, long[] stridep, double[] ip);

/*int nc_get_vars_string(int ncid, int varid, const size_t *startp, const size_t *countp, const ptrdiff_t *stridep, char **ip);  */
  int nc_put_vars_string(int ncid, int varid, long[] startp, long[] countp, long[] stridep, String[] ip);

  int nc_put_var_uchar(int ncid, int varid, byte[] ip);
  int nc_put_var_schar(int ncid, int varid,  byte[] ip);
  int nc_put_var_text(int ncid, int varid, byte[] ip);
  int nc_put_var_short(int ncid, int varid, short[] ip);
  int nc_put_var_ushort(int ncid, int varid, short[] ip);
  int nc_put_var_int(int ncid, int varid, int[] ip);
  int nc_put_var_uint(int ncid, int varid, int[] ip);
  int nc_put_var_longlong(int ncid, int varid, long[] ip);
  int nc_put_var_ulonglong(int ncid, int varid, long[] ip);
  int nc_put_var_float(int ncid, int varid, float[] ip);
  int nc_put_var_double(int ncid, int varid, double[] ip);
  int nc_put_var_string(int ncid, int varid, String[] op);


  // nc_put_vars_double(int ncid, int varid, const size_t *startp, const size_t *countp, const ptrdiff_t *stridep, const double *op);

  // nc_put_att_string(int ncid, int varid, const char *name, long len, const char **op);

  // write attributes
  int nc_put_att (int ncid, int varid, String name, int xtype, long len, ByteBuffer value);
  int nc_put_att_string(int ncid, int varid, String attName, long len, String[] value);
  int nc_put_att_text(int ncid, int varid, String attName, long len, byte[] value);
  int nc_put_att_uchar(int ncid, int varid, String attName, int xtype, long len, byte[] value);
  int nc_put_att_schar(int ncid, int varid, String attName, int xtype, long len, byte[] value);
  int nc_put_att_short(int ncid, int varid, String attName, int xtype, long len, short[] value);
  int nc_put_att_ushort(int ncid, int varid, String attName, int xtype, long len, short[] value);
  int nc_put_att_int(int ncid, int varid, String attName, int xtype, long len, int[] value);
  int nc_put_att_uint(int ncid, int varid, String attName, int xtype, long len, int[] value);
  int nc_put_att_longlong(int ncid, int varid, String attName, int xtype, long len, long[] value);
  int nc_put_att_ulonglong(int ncid, int varid, String attName, int xtype, long len, long[] value);
  int nc_put_att_float(int ncid, int varid, String attName, int xtype, long len, float[] value);
  int nc_put_att_double(int ncid, int varid, String attName, int xtype, long len, double[] value);
  
  /* Extra netcdf-4 stuff. */
  
  /* Set compression settings for a variable. Lower is faster, higher is better.
   * Must be called after nc_def_var and before nc_enddef. */
  int nc_def_var_deflate(int ncid, int varid, int shuffle, int deflate, int deflate_level);
  
  /* Find out compression settings of a var. */
  int nc_inq_var_deflate(int ncid, int varid, IntByReference shufflep, IntByReference deflatep, IntByReference deflate_levelp);
  
  /* Find out szip settings of a var. */
  int nc_inq_var_szip(int ncid, int varid, IntByReference options_maskp, IntByReference pixels_per_blockp);

  /* Set fletcher32 checksum for a var. This must be done after nc_def_var and before nc_enddef. */
  int nc_def_var_fletcher32(int ncid, int varid, int fletcher32);

  /* Inquire about fletcher32 checksum for a var. */
  int nc_inq_var_fletcher32(int ncid, int varid, IntByReference fletcher32p);
  
  /* Define chunking for a variable. This must be done after nc_def_var and before nc_enddef. */
  // int nc_def_var_chunking(int ncid, int varid, int *chunkalgp, int *chunksizesp, int *extend_incrementsp);
  int nc_def_var_chunking(int ncid, int varid, int storage, long[] chunksizesp); // const size_t *   ??
  
  /* Inq chunking stuff for a var. */
  int nc_inq_var_chunking(int ncid, int varid, IntByReference storagep, long[] chunksizesp); // size_t *  ??
  
  /* Define fill value behavior for a variable. This must be done after nc_def_var and before nc_enddef. */
  int nc_def_var_fill(int ncid, int varid, int no_fill, ByteBuffer fill_value); // const void *  ??
  
  /* Inq fill value setting for a var. */
  int nc_inq_var_fill(int ncid, int varid, IntByReference no_fill, ByteBuffer fill_valuep); // void * ??
  
  /* Define the endianness of a variable. */
  int nc_def_var_endian(int ncid, int varid, int endian);
  
  /* Learn about the endianness of a variable. */
  int nc_inq_var_endian(int ncid, int varid, IntByReference endianp);

  /* Set the fill mode (classic or 64-bit offset files only). */
  int nc_set_fill(int ncid, int fillmode, IntByReference old_modep);
  
  /* Set the default nc_create format to NC_FORMAT_CLASSIC,
   * NC_FORMAT_64BIT, NC_FORMAT_NETCDF4, NC_FORMAT_NETCDF4_CLASSIC. */
  int nc_set_default_format(int format, IntByReference old_formatp);
  
  /* Set the cache size, nelems, and preemption policy. */
  int nc_set_chunk_cache(long size, long nelems, float preemption);
  
  /* Get the cache size, nelems, and preemption policy. */
  int nc_get_chunk_cache(NativeLongByReference sizep, NativeLongByReference nelemsp, FloatByReference preemptionp);
  
  /* Set the per-variable cache size, nelems, and preemption policy. */
  int nc_set_var_chunk_cache(int ncid, int varid, long size, long nelems, float preemption);
  
  /* Set the per-variable cache size, nelems, and preemption policy. */
  int nc_get_var_chunk_cache(int ncid, int varid, NativeLongByReference sizep, NativeLongByReference nelemsp, FloatByReference preemptionp);
}
